--- a/frontend/src/components/Booking/Bookings.css
+++ b/frontend/src/components/Booking/Bookings.css
@@ -35,3 +35,27 @@
     height: 100%;
 
 }
+
+h2{
+    font-size: 18px;
+    color: var(--main-color);
+    padding: 5px 0;
+    text-transform: uppercase;
+    font-weight: 500;
+    text-decoration: underline;
+}
+.location{
+    display: flex;
+    align-items: flex-start;
+    justify-content: start;
+    gap: 4px;
+    padding: 5px;
+}
+.location #map{
+    font-size: 1.5rem;
+}
+.location p{
+    margin-top: 3px;
+    font-weight: 500;
+    font-size: 12px;
+}
