--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -1,4 +1,4 @@
-.navbar nav{
+.navbar nav {
     width: 100%;
     height: 100px;
     padding: 0 30px;
@@ -8,64 +8,62 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-}
-.navbar .links{
+  }
+  
+  .navbar .links {
     display: flex;
     list-style: none;
     align-items: center;
     justify-content: center;
     gap: 30px;
-}
-.links li {
+  }
+  
+  .links li {
+    position: relative;
+  }
+  
+  .links li a {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     width: auto;
-    height: 30px;
-    padding: 0 10px;
+    height: 40px;
+    padding:  10px;
     background: transparent;
     border-radius: 5px;
     color: var(--black);
     overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    transition: .3s cubic-bezier(0.39, 0.575, 0.565, 1);
+    text-decoration: none;
+    transition: 0.3s cubic-bezier(0.39, 0.575, 0.565, 1);
     cursor: pointer;
     position: relative;
-}
-
-.links li::after {
+  }
+  
+  .links li a::after {
     content: '';
     position: absolute;
-    bottom:0;
+    bottom: 0;
     left: 0;
     width: 100%;
     height: 1px;
     background: var(--black);
     transform: scaleX(0);
     transform-origin: right center;
-    transition: transform .6s cubic-bezier(.19,1,.22,1), -webkit-transform .6s cubic-bezier(.19,1,.22,1);
-}
-
-.links li:hover::after {
+    transition: transform 0.6s cubic-bezier(0.19, 1, 0.22, 1);
+  }
+  
+  .links li a:hover::after {
     transform: scaleX(1);
     transform-origin: left center;
-}
-
-.links li span:nth-child(1){
-    transform: translateY(0);
-    transition: .3s cubic-bezier(.38,-0.01,.61,1) all;
-}
-.links li:hover span:nth-child(1){
-    transform: translateY(-100%);
-}
-.links li span:nth-child(2){
-    transform: translateY(100%);
-    transition: .3s cubic-bezier(.38,-0.01,.61,1) all;
-}
-.links li:hover span:nth-child(2){
-    transform: translateY(-100%);
-}
-
-
-.login{
+  }
+  
+ .links li{
+    transition: .5s ease-in-out;
+ }
+  .login {
     margin-left: 5vw;
     border: 1px solid #000;
-}
+    border-radius: 4px;
+  }
+  
